--- a/Project2/assets/main.css
+++ b/Project2/assets/main.css
@@ -38,7 +38,7 @@ a {
 }
 
 h1 {
-  margin: 1%;
+  margin: 1% 0;
   text-align: center;
   font-weight: bolder;
   font-size: 80px;
@@ -61,9 +61,7 @@ h1 {
 
 .bar2 {
   position: relative;
-  width: 100%;
   top: 10px;
-  margin: auto;
   padding: .7em;
   text-align: center;
   background-color: #05386B;
@@ -358,18 +356,22 @@ button a:hover {
 /* collection */
 #collection-list {
   position: relative;
-  list-style-type: none;
   display: flex;
   flex-direction: column;
-  margin: 5% 5%;
+  margin: 4% 2%;
   padding: 50px;
+
+  font-family: 'Josefin Sans', sans-serif;
+  color: #05386B;
   font-size: 200%;
+  font-weight: 500;
   line-height: 160%;
-  font-weight:200;
+
+  list-style-type: none;
   overflow-y: scroll;
   height: 400px;
 
-  background-color: #EDF5E1;
+  background-color: #5CDB95;
   border-radius: 20px;
 }
 
@@ -380,8 +382,8 @@ button a:hover {
   align-items: center;
   margin: 1%;
   
-  border-radius: 40px;
-  background-color: #05386B;
+  border-radius: 20px;
+  background-color: #EDF5E1;
 }
 
 #collection-list li img {
