--- a/Project2/assets/main.css
+++ b/Project2/assets/main.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #5CDB95;
+  background-color: #05386B;
   color: #EDF5E1;
   font-family: 'Josefin Sans', sans-serif;
 }
@@ -17,6 +17,12 @@ section {
 article {
   position: relative;
 }
+
+article:nth-of-type(2) {
+  background-color: #5CDB95;
+  border-radius: 20px;
+  margin: 1%;
+} 
 
 article:nth-of-type(4) {
   background-color: #05386B;
@@ -38,15 +44,19 @@ a {
 }
 
 h1 {
-  margin: 1% 0;
+  margin: 1% 0 0;
   text-align: center;
   font-weight: bolder;
   font-size: 80px;
 }
 
+h2 {
+  margin: 0;
+}
+
 /*Bar*/ 
 .map {
-  filter:invert(48%) sepia(79%) saturate(3000%) hue-rotate(170deg) brightness(40%) contrast(120%);
+  filter:invert(48%) sepia(79%) saturate(3000%) hue-rotate(170deg) brightness(45%) contrast(140%);
 }
 
 /*Bar*/ 
@@ -54,7 +64,8 @@ h1 {
 .bar {
   position: relative;
   bottom: 0;
-  padding: 0.5em;
+  margin: AUTO;
+  padding: 0.5%;
   text-align: center;
   background-color: #05386B;
 }
@@ -311,7 +322,7 @@ button a:hover {
 .object28 img,
 .object29 img {
   display: block;
-  width: 35px;
+  width: 40px;
   height: auto;
   z-index: 1;
   filter: grayscale(1);
