--- a/Week8_Recipe/assets/style.css
+++ b/Week8_Recipe/assets/style.css
@@ -2,7 +2,7 @@ html {
     margin: 2em;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(35, 19, 9);
-    background-image: rgb(227, 202, 14);
+    background-color: rgb(227, 202, 14);
     font-size: 20px;
 }
 
@@ -14,6 +14,7 @@ section {
 
 article {
     margin: auto;
+    display: flex;
     flex-direction: row;
     background-color: rgb(255, 255, 226);
     border-radius: 10px;
