--- a/Project2/assets/main.css
+++ b/Project2/assets/main.css
@@ -580,6 +580,7 @@ button a:hover {
     font-size: 60px;
     margin: 0.5em;
   }
+
   .map {
     display: none;
   }
@@ -607,7 +608,7 @@ button a:hover {
   #collection-list li p {
     font-size: 55%;
     line-height: 160%;
-    margin: 0;
+    margin: 0 2em;
   }
 
   #toggle-overflow {
