--- a/Project3/assets/main.css
+++ b/Project3/assets/main.css
@@ -1,6 +1,7 @@
 html {
   background-color: #2F8BA6;
   color: #EDF5E1;
+  font-family: 'Lato', sans-serif;
 }
 
 body {
@@ -125,3 +126,155 @@ p {
   background-color: #F89E11;
 }
 
+h2 {
+  color: #F89E11;
+  font-size: 500px;
+  margin: 50px;
+  line-height: 80%;
+}
+
+.fact p {
+  margin: 2em 4em;
+  font-size: 35px;
+}
+
+/** Graph **/
+ul.diseases {
+  position: relative;
+  background-color: rgba(194, 194, 194, 0.5);
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-radius: 30px;
+  padding: 10px;
+  margin-bottom: 20px;
+  text-align: center; 
+}
+
+ul.diseases li {
+  position: relative;
+  background-color: white;
+  color: #5ACAE3;
+  border-radius: 30px;
+  margin: 20px;
+  padding: 15px;
+  list-style: none;
+  text-align: center;
+}
+
+ul.diseases li.disease-header {
+  margin: 10px;
+  color: white;
+  font-size: 23px;
+  background-color: transparent; 
+}
+
+/* blue circle */
+.circle.blue {
+  position: absolute;
+  top: -10px; 
+  left: calc(50% - 10px);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #2F8BA6;
+}
+
+/* orange circle */
+ul.diseases:before {
+  content: '';
+  position: absolute;
+  top: -15px; 
+  left: calc(50% - 17px); 
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: orange;
+}
+
+/** Section 3 **/
+h3 { 
+  margin: 0;
+  font-size: 200px;
+  font-weight: 600;
+  text-align: center;
+}
+
+h3:first-of-type {
+  font-size: 310px
+}
+
+/* Pi Chart */
+.chart {
+  position: relative;
+  margin-bottom: 50px;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background: #F89E11;
+}
+
+.slice {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.female {
+  clip: rect(0, 200px, 400px, 0);
+  background: #F89E11;
+  transform: rotate(0.526turn);
+}
+
+.male {
+  clip: rect(0, 200px, 400px, 0);
+  background: #5ACAE3;
+  transform: rotate(-0.474turn);
+}
+
+.key {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+
+  bottom: 30px;
+  left: 300px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.female-key {
+  margin-top: 10px;
+  margin-right: 5px;
+  width: 10px;
+  height: 10px;
+  background: #F89E11;
+  border-radius: 20px;
+}
+
+.male-key {
+  margin-top: 15px;
+  margin-right: 5px;
+  width: 10px;
+  height: 10px;
+  background: #5ACAE3;
+  border-radius: 20px;
+}
+
+/* Facts */
+
+.chat1 {
+  background-color: rgba(187, 230, 243, 0.445);
+
+  margin: 2em 7em;
+  padding: 3em;
+  border-radius: 3em;
+
+  font-size: 20px;
+  text-align: center;
+  line-height: 25px;
+}
