--- a/Project3/assets/main.css
+++ b/Project3/assets/main.css
@@ -140,6 +140,11 @@ p {
   background-color: #F89E11;
 }
 
+.circle3 p {
+  position: absolute;
+  bottom: 30px;
+}
+
 h2 {
   color: #F89E11;
   font-size: 500px;
@@ -211,6 +216,14 @@ ul.diseases:before {
 h3 {
   margin: 0;
   font-size: 200px;
+  font-weight: 600;
+  text-align: center;
+}
+
+
+h4 {
+  margin: 0;
+  font-size: 150px;
   font-weight: 600;
   text-align: center;
 }
@@ -436,7 +449,7 @@ h3 {
 .gradient {
   background-image: linear-gradient(rgba(255, 0, 0, 0), rgb(158, 2, 11));
   width: auto;
-  height: 1000px;
+  height: 1500px;
 }
 
 .death {
